--- a/src/_layouts.scss
+++ b/src/_layouts.scss
@@ -7,7 +7,7 @@
 
 .top {
   display: flex;
-  height: 15vh;
+  height: 16vh;
   justify-content: flex-end;
   background-color: $color-primary-dark;
   text-align: end;
